added automatically role assignment
